[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firedancer-health-exporter"
version = "0.5.0"
description = "Prometheus exporter for Firedancer Solana validator — log-based and RPC metrics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Antipov", email = "alex78.kone@gmail.com" }]
requires-python = ">=3.10"
keywords = ["solana", "firedancer", "prometheus", "validator", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "prometheus_client>=0.19",
]

[project.scripts]
firedancer-exporter = "firedancer_health_exporter.exporter:main"
firedancer-analyze  = "firedancer_health_exporter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage   = "https://github.com/Lvk2015/firedancer-health-exporter"
Repository = "https://github.com/Lvk2015/firedancer-health-exporter"
Issues     = "https://github.com/Lvk2015/firedancer-health-exporter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools]
# Needed for editable installs with older pip versions


[tool.coverage.run]
source = ["src"]
